name:                ProteoDSL
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ProteoDSL#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ProteoDSL
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       vector,
                       text,
                       cassava,
                       containers,
                       parsec,
                       mtl,
                       directory,
                       csv
